--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dev": "webpack --config webpack.config.js --mode development --watch"
   },
   "jest": {
-    "setupFilesAfterEnv": ["<rootDir>/setupTests.js"],
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTests.js"
+    ],
     "testEnvironment": "node"
   },
   "repository": {
@@ -72,11 +74,13 @@
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
+    "@babel/runtime": "^7.8.3",
     "@typescript-eslint/eslint-plugin": "^2.6.1",
     "@typescript-eslint/parser": "^2.6.1",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.0",
+    "babel-polyfill": "^6.26.0",
     "compression-webpack-plugin": "^3.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
