--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "jest": {
     "setupFilesAfterEnv": [
       "<rootDir>/setupTests.js"
-    ],
-    "testEnvironment": "node"
+    ]
   },
   "repository": {
     "type": "git",
@@ -100,6 +99,7 @@
     "jest": "^24.9.0",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
+    "redux-mock-store": "^1.5.4",
     "terser-webpack-plugin": "^2.2.1",
     "typescript": "^3.7.2",
     "webpack": "^4.41.5",
