--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "jest": {
     "setupFilesAfterEnv": [
-      "<rootDir>/setupTests.js", "jest-canvas-mock"
+      "<rootDir>/setupTests.js",
+      "jest-canvas-mock"
     ],
     "testEnvironment": "jsdom"
   },
@@ -59,6 +60,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "redux-undo": "^0.6.1",
+    "reselect": "^4.0.0",
     "style-loader": "^1.0.0",
     "typeface-roboto": "^0.0.75",
     "url-loader": "^2.2.0",
