--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-decorators": "^7.0.0",
     "@babel/polyfill": "^7.0.0",
+    "@gitgraph/react": "^1.5.2",
     "@hot-loader/react-dom": "^16.11.0",
     "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
@@ -99,6 +100,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^2.3.0",
+    "file-loader": "^5.0.2",
     "husky": "^4.0.6",
     "jest": "^24.9.0",
     "jest-canvas-mock": "^2.2.0",
