--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-decorators": "^7.0.0",
     "@babel/polyfill": "^7.0.0",
+    "@date-io/date-fns": "1.x",
     "@hot-loader/react-dom": "^16.11.0",
-    "@material-ui/core": "^4.8.3",
+    "@material-ui/core": "^4.9.1",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.39",
     "@sentry/browser": "^5.7.1",
@@ -41,8 +42,12 @@
     "classnames": "^2.2.6",
     "cross-fetch": "^3.0.4",
     "css-loader": "^3.2.0",
+    "date-fns": "^2.9.0",
     "express": "^4.17.1",
     "file-saver": "^2.0.2",
+    "formik": "^2.1.3",
+    "formik-material-ui": "^2.0.0-alpha.3",
+    "formik-material-ui-pickers": "^0.0.4",
     "jszip": "^3.2.2",
     "lodash": "^4.17.15",
     "logrocket": "^1.0.3",
