--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "formik": "^2.1.3",
     "formik-material-ui": "^2.0.0-alpha.3",
     "formik-material-ui-pickers": "^0.0.4",
+    "js-base64": "^2.5.2",
     "jszip": "^3.2.2",
     "lodash": "^4.17.15",
     "logrocket": "^1.0.3",
