--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
     "redux-mock-store": "^1.5.4",
+    "resize-observer-polyfill": "^1.5.1",
     "terser-webpack-plugin": "^2.2.1",
     "typescript": "^3.7.2",
     "webpack": "^4.41.5",
