--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,14 @@
 # To trigger the dependent, downstream builds (like the Stack and Loader)...
 #
 # TRIGGER_DOWNSTREAM    Should be set to 'yes'
-#                       Enabling TRIGGER_DOWNSTREAM is only effective
-#                       if PUBLISH_IMAGES is also set.
+#                       to trigger downstream projects.
 #
 # The following required if TRIGGER_DOWNSTREAM...
 #
 # TRAVIS_ACCESS_TOKEN   A Travis token
 #
-# FE_NAMESPACE          To define the namespace of the frontend (as used by teh Stack) (default is 'xchem')
-# FE_BRANCH             To define the branch of the frontend (as used by teh Stack) (default is 'master')
+# FE_NAMESPACE          To define the namespace of the frontend (as used by the Stack) (default is 'xchem')
+# FE_BRANCH             To define the branch of the frontend (as used by the Stack) (default is 'master')
 # BE_NAMESPACE          To define the namespace of the backend (default is 'xchem')
 # STACK_NAMESPACE       To define the namespace of the Stack repository (default is 'xchem')
 # STACK_BRANCH          The branch to trigger (default is 'master')
@@ -40,9 +39,9 @@ before_install:
 # The downstream projects are the Fragalysis Stack.
 # The user can define the following variables in their Travis Settings.
 # If they're not defined then apply sensible defaults.
-- export FE_NAMESPACE=${FE_NAMESPACE-xchem}
-- export FE_BRANCH=${FE_NAMESPACE-master}
-- export BE_NAMESPACE=${BE_NAMESPACE-xchem}
+- export FE_NAMESPACE=${FE_NAMESPACE:-xchem}
+- export FE_BRANCH=${FE_NAMESPACE:-master}
+- export BE_NAMESPACE=${BE_NAMESPACE:-xchem}
 - export STACK_NAMESPACE=${STACK_NAMESPACE:-xchem}
 - export STACK_BRANCH=${STACK_BRANCH:-master}
 - export STACK_VARS=FE_IMAGE_TAG=latest,FE_NAMESPACE=${FE_NAMESPACE},BE_NAMESPACE=${BE_NAMESPACE}
