--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
     "file-saver": "^2.0.2",
-    "formik": "^2.1.3",
-    "formik-material-ui": "^2.0.0-alpha.3",
-    "formik-material-ui-pickers": "^0.0.4",
+    "formik": "^2.1.4",
+    "formik-material-ui": "^2.0.0-beta.1",
+    "formik-material-ui-pickers": "^0.0.8",
     "js-base64": "^2.5.2",
     "jszip": "^3.2.2",
     "lodash": "^4.17.15",
