--- a/.travis.yml
+++ b/.travis.yml
@@ -20,63 +20,63 @@
 # STACK_BRANCH          The branch to trigger (default is 'master')
 
 stages:
-- name: test
-  if: branch = master
-- name: trigger downstream
-  if: |
-    branch = master \
-    AND env(TRIGGER_DOWNSTREAM) = yes
+  - name: test
+    if: branch = master
+  - name: trigger downstream
+    if: |
+      branch = master \
+      AND env(TRIGGER_DOWNSTREAM) = yes
 
 # Global variables
 # (available to the Job matrix)...
 env:
   global:
-  # The origin of the trigger code
-  - TRIGGER_ORIGIN=https://raw.githubusercontent.com/informaticsmatters/trigger-travis/master
+    # The origin of the trigger code
+    - TRIGGER_ORIGIN=https://raw.githubusercontent.com/informaticsmatters/trigger-travis/master
 
 before_install:
-# Downstream project triggers.
-# The downstream projects are the Fragalysis Stack.
-# The user can define the following variables in their Travis Settings.
-# If they're not defined then apply sensible defaults.
-- export FE_NAMESPACE=${FE_NAMESPACE:-xchem}
-- export FE_BRANCH=${FE_NAMESPACE:-master}
-- export BE_NAMESPACE=${BE_NAMESPACE:-xchem}
-- export STACK_NAMESPACE=${STACK_NAMESPACE:-xchem}
-- export STACK_BRANCH=${STACK_BRANCH:-master}
-- export STACK_VARS=FE_IMAGE_TAG=latest,FE_NAMESPACE=${FE_NAMESPACE},BE_NAMESPACE=${BE_NAMESPACE}
+  # Downstream project triggers.
+  # The downstream projects are the Fragalysis Stack.
+  # The user can define the following variables in their Travis Settings.
+  # If they're not defined then apply sensible defaults.
+  - export FE_NAMESPACE=${FE_NAMESPACE:-xchem}
+  - export FE_BRANCH=${FE_BRANCH:-master}
+  - export BE_NAMESPACE=${BE_NAMESPACE:-xchem}
+  - export STACK_NAMESPACE=${STACK_NAMESPACE:-xchem}
+  - export STACK_BRANCH=${STACK_BRANCH:-master}
+  - export STACK_VARS=FE_IMAGE_TAG=latest,FE_NAMESPACE=${FE_NAMESPACE},BE_NAMESPACE=${BE_NAMESPACE},FE_BRANCH=${FE_BRANCH}
 
 jobs:
   include:
 
-  # Test-stage jobs...
+    # Test-stage jobs...
 
-  - stage: test
-    name: Test and Build
-    language: node_js
-    node_js: 10
-    script:
-    - yarn install
-    - if [ "$TRAVIS_BRANCH" == "master" ]; then
-      yarn run build;
-      fi
+    - stage: test
+      name: Test and Build
+      language: node_js
+      node_js: 10
+      script:
+        - yarn install
+        - if [ "$TRAVIS_BRANCH" == "master" ]; then
+          yarn run build;
+          fi
 
-  # Downstream trigger
+    # Downstream trigger
 
-  - stage: trigger downstream
-    name: Trigger Downstream
-    language: python
-    python: 3.8
-    before_script:
-    # Download trigger code
-    - curl --location --retry 3 ${TRIGGER_ORIGIN}/requirements.txt --output trigger-travis-requirements.txt
-    - curl --location --retry 3 ${TRIGGER_ORIGIN}/trigger-travis.py --output trigger-travis.py
-    - pip install -r trigger-travis-requirements.txt
-    - chmod +x trigger-travis.py
-    script:
-    - echo "STACK_NAMESPACE=${STACK_NAMESPACE}"
-    - echo "STACK_BRANCH=${STACK_BRANCH}"
-    - echo "STACK_VARS=${STACK_VARS}"
-    - ./trigger-travis.py --pro ${STACK_NAMESPACE} fragalysis-stack ${TRAVIS_ACCESS_TOKEN} --branch ${STACK_BRANCH} --vars ${STACK_VARS}
+    - stage: trigger downstream
+      name: Trigger Downstream
+      language: python
+      python: 3.8
+      before_script:
+        # Download trigger code
+        - curl --location --retry 3 ${TRIGGER_ORIGIN}/requirements.txt --output trigger-travis-requirements.txt
+        - curl --location --retry 3 ${TRIGGER_ORIGIN}/trigger-travis.py --output trigger-travis.py
+        - pip install -r trigger-travis-requirements.txt
+        - chmod +x trigger-travis.py
+      script:
+        - echo "STACK_NAMESPACE=${STACK_NAMESPACE}"
+        - echo "STACK_BRANCH=${STACK_BRANCH}"
+        - echo "STACK_VARS=${STACK_VARS}"
+        - ./trigger-travis.py --pro ${STACK_NAMESPACE} fragalysis-stack ${TRAVIS_ACCESS_TOKEN} --branch ${STACK_BRANCH} --vars ${STACK_VARS}
 notifications:
   slack: fragalysis:a6ADA8gLyx8tpHQfyzucMB8B
