--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,7 +4,7 @@ services:
   database:
     image: postgres:12.2
     volumes:
-      - ../data/postgre/data:/var/lib/postgresql/data
+      - ../data/postgre/data:/var/lib/postgresql
     environment:
       POSTGRES_PASSWORD: fragalysis
       POSTGRES_USER: fragalysis
