--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "formik": "^2.1.4",
     "formik-material-ui": "^2.0.0-beta.1",
     "formik-material-ui-pickers": "^0.0.8",
+    "html2canvas": "^1.0.0-rc.7",
     "js-base64": "^2.5.2",
     "jszip": "^3.2.2",
     "lodash": "^4.17.15",
@@ -61,6 +62,7 @@
     "react-color": "^2.17.3",
     "react-dom": "^16.12.0",
     "react-event-timeline": "^1.6.3",
+    "react-grid-gallery": "^0.5.5",
     "react-hot-loader": "^4.12.18",
     "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.1.3",
